navbar on home page + overflow-y fixed

--- a/Frontend/public/global.css
+++ b/Frontend/public/global.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
-
+html {
+    overflow-y: scroll;
+}
 
 body{
     margin:0;
